--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "azure-devops-pipeline-viewer",
   "displayName": "Azure DevOps - Pipeline Viewer",
   "publisher": "Anonknowsit",
+  "repository": { 
+  "type": "git", 
+  "url": "https://github.com/anonknowsit/ado-pipeline-viewer.git" 
+  },
   "description": "A Visual Studio Code extension to view Azure DevOps pipelines for multiple projects within a single organization.",
   "version": "0.0.1",
   "icon": "azure-pipeline-viewer.jpeg",
