--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "azure-devops-pipeline-viewer",
   "displayName": "Azure DevOps - Pipeline Viewer",
   "publisher": "Anonknowsit",
-  "repository": { 
-  "type": "git", 
-  "url": "https://github.com/anonknowsit/ado-pipeline-viewer.git" 
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/anonknowsit/ado-pipeline-viewer.git"
   },
   "description": "A Visual Studio Code extension to view Azure DevOps pipelines for multiple projects within a single organization.",
   "version": "0.0.1",
@@ -15,15 +15,15 @@
   "categories": [
     "Other"
   ],
-  "main": "./out/extension.js",
+  "main": "./dist/extension.js",
   "contributes": {
     "menus": {
       "statusBar": [
-      {
-        "command": "azurePipelines.showRunningPipelines",
-        "when": "azurePipelines.hasRunningPipelines"
-      }
-    ],
+        {
+          "command": "azurePipelines.showRunningPipelines",
+          "when": "azurePipelines.hasRunningPipelines"
+        }
+      ],
       "view/title": [
         {
           "command": "azurePipelines.refresh",
@@ -66,48 +66,50 @@
         }
       ]
     },
-   "views": {
-        "azure-pipelines": [
-          {
-            "id": "azurePipelinesAuth",
-            "name": "Authentication"
-          },
-            {
-                "id": "azurePipelines",
-                "name": "Pipelines"
-            }
-        ]
+    "views": {
+      "azure-pipelines": [
+        {
+          "id": "azurePipelinesAuth",
+          "name": "Authentication"
+        },
+        {
+          "id": "azurePipelines",
+          "name": "Pipelines"
+        }
+      ]
     },
     "commands": [
-        {
-            "command": "azurePipelines.refresh",
-            "title": "Refresh",
-            "icon": "$(refresh)"
-        },
-        {
-            "command": "azurePipelines.setPAT",
-            "title": "Set Azure DevOps PAT"
-        },
-        {
-            "command": "azurePipelines.setOrgUrl",
-            "title": "Set Azure DevOps Organization URL"
-        },
-        {
-          "command": "azurePipelines.addProject",
-          "title": "Add Azure DevOps Project"
-        },
-        {
-          "command": "azurePipelines.removeProject",
-          "title": "Remove Azure DevOps Project"
-        },
-        {
-          "command": "azurePipelines.resetSecrets",
-          "title": "Reset Azure DevOps Secrets"
-        }
+      {
+        "command": "azurePipelines.refresh",
+        "title": "Refresh",
+        "icon": "$(refresh)"
+      },
+      {
+        "command": "azurePipelines.setPAT",
+        "title": "Set Azure DevOps PAT"
+      },
+      {
+        "command": "azurePipelines.setOrgUrl",
+        "title": "Set Azure DevOps Organization URL"
+      },
+      {
+        "command": "azurePipelines.addProject",
+        "title": "Add Azure DevOps Project"
+      },
+      {
+        "command": "azurePipelines.removeProject",
+        "title": "Remove Azure DevOps Project"
+      },
+      {
+        "command": "azurePipelines.resetSecrets",
+        "title": "Reset Azure DevOps Secrets"
+      }
     ]
   },
   "scripts": {
-    "vscode:prepublish": "npm run compile",
+    "vscode:prepublish": "webpack --mode production",
+    "webpack": "webpack --mode development",
+    "webpack-dev": "webpack --mode development --watch",
     "compile": "tsc -p ./",
     "watch": "tsc -watch -p ./",
     "pretest": "npm run compile && npm run lint",
@@ -124,7 +126,10 @@
     "@vscode/test-electron": "^2.4.0",
     "eslint": "^8.57.0",
     "mocha": "^8.3.2",
-    "typescript": "^5.4.5"
+    "ts-loader": "^9.5.1",
+    "typescript": "^5.4.5",
+    "webpack": "^5.93.0",
+    "webpack-cli": "^5.1.4"
   },
   "dependencies": {
     "axios": "^1.7.2",
