--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,16 +1,12 @@
 {
 	"compilerOptions": {
 	  "module": "commonjs",
-	  "target": "es6",
-	  "outDir": "out",
-	  "lib": ["es6"],
-	  "sourceMap": true,
-	  "rootDir": "src",
+	  "target": "es2020",
+	  "outDir": "./dist",
+	  "rootDir": "./src",
 	  "strict": true,
-	  "noImplicitReturns": true,
-	  "noFallthroughCasesInSwitch": true,
-	  "noUnusedParameters": true,
-	  "types": ["node", "mocha", "vscode"]
+	  "esModuleInterop": true,
+	  "skipLibCheck": true
 	},
 	"include": ["src"]
-  }
+}
